# rusty6502

./: .gitignore  Cargo.toml
src/: args.rs  bus.rs  main.rs
src/cpu/: instructions.rs  lookup_table.rs  mod.rs  registers.rs
